# tower-minify-html

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: release-plz.yml
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
src/: lib.rs
