[package]
name = "tower-minify-html"
version = "0.2.0"
edition = "2024"
description = "A Tower layer for minifying HTML responses using minify-html"
repository = "https://github.com/avsaase/tower-minify-html"
license = "MIT OR Apache-2.0"
keywords = ["axum", "html", "middleware", "minify", "tower"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
bytes = "1.11.0"
http = "1.4.0"
http-body-util = "0.1.3"
minify-html = { version = "0.18.1", optional = true }
minify-html-onepass = { version = "0.18.1", optional = true }
tower = "0.5.2"
tracing = "0.1.44"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-br"] }

[features]
default = ["standard"]
standard = ["dep:minify-html"]
onepass = ["dep:minify-html-onepass"]
